# xlib

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  xalloc.c  xalloc.h  xdict.c  xdict.h  xlist.c  xlist.h  xskiplist.c  xskiplist.h  xstr.c  xstr.h  xstring.c  xstring.h  xtest.h  xtype.h
tests/: CMakeLists.txt  test_xdict.c  test_xlist.c  test_xskiplist.c  test_xstr.c
